Fix scrolling in header sections
Restrict the scroll-able portion to an inner <div> while keeping the rest hidden
so that the expanding/collapsing sections don't cause an additional scrollbar to
appear. (The extra scrollbar causes horizontal jumps in the contents as the
width of the viewport expands/shrinks.)

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -172,7 +172,7 @@ header.masthead {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  overflow: auto;
+  overflow: hidden;
 }
 
 header.masthead .heading-wrapper {
@@ -183,7 +183,11 @@ header.masthead .heading-wrapper {
 
 header.masthead .bg-darken {
   background-color: rgba(0, 0, 0, 0.7);
-  overflow-y: scroll;
+}
+
+.content-wrapper {
+  height: 90%;
+  overflow: auto;
 }
 
 header.masthead .header-content {
